--- a/packages/community-cli-plugin/package.json
+++ b/packages/community-cli-plugin/package.json
@@ -27,14 +27,14 @@
     "chalk": "^4.0.0",
     "execa": "^5.1.1",
     "invariant": "^2.2.4",
-    "metro": "^0.81.0-alpha.2",
-    "metro-config": "^0.81.0-alpha.2",
-    "metro-core": "^0.81.0-alpha.2",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-core": "^0.81.0",
     "node-fetch": "^2.2.0",
     "readline": "^1.3.0"
   },
   "devDependencies": {
-    "metro-resolver": "^0.81.0-alpha.2"
+    "metro-resolver": "^0.81.0"
   },
   "peerDependencies": {
     "@react-native-community/cli-server-api": "*"
