--- a/.github/workflows/danger-pr.yml
+++ b/.github/workflows/danger-pr.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'facebook/react-native'
     steps:
+      - uses: actions/checkout@v4
       - name: Setup node.js
         uses: ./.github/actions/setup-node
       - name: Run yarn
