fix(virtualized-lists): revert dependency change to break cycle

--- a/packages/virtualized-lists/package.json
+++ b/packages/virtualized-lists/package.json
@@ -35,7 +35,7 @@
   "peerDependencies": {
     "@types/react": "^18.2.6",
     "react": "*",
-    "react-native-macos": "*"
+    "react-native": "*"
   },
   "peerDependenciesMeta": {
     "@types/react": {
