--- a/packages/rn-tester/Gemfile
+++ b/packages/rn-tester/Gemfile
@@ -9,3 +9,4 @@ ruby ">= 2.6.10"
 gem 'cocoapods', '>= 1.13', '< 1.15'
 gem 'rexml'
 gem 'activesupport', '>= 6.1.7.3', '< 7.1.0'
+gem 'xcodeproj', '< 1.26.0'
