--- a/packages/community-cli-plugin/package.json
+++ b/packages/community-cli-plugin/package.json
@@ -31,7 +31,8 @@
     "metro-config": "^0.81.0-alpha.2",
     "metro-core": "^0.81.0-alpha.2",
     "node-fetch": "^2.2.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "semver": "^7.1.3"
   },
   "devDependencies": {
     "metro-resolver": "^0.81.0-alpha.2"
