fix(0.76): use `set-version` instead of `set-rn-version` (#2257)

--- a/.ado/templates/apple-steps-publish.yml
+++ b/.ado/templates/apple-steps-publish.yml
@@ -31,7 +31,7 @@ steps:
       inputs:
         script: |
           set -eox pipefail
-          node scripts/releases/set-rn-version.js -v $RNM_PACKAGE_VERSION --build-type "release"
+          node scripts/releases/set-version.js -v $RNåM_PACKAGE_VERSION --build-type "release"
 
   # Note: This won't actually publish to NPM as we've commented that bit out.
   # We do that as a separate step in `.ado/publish.yml`. 
