--- a/packages/react-native-info/package.json
+++ b/packages/react-native-info/package.json
@@ -17,10 +17,10 @@
     "directory": "packages/react-native-info"
   },
   "dependencies": {
-    "@react-native-community/cli-config": "15.0.0-alpha.2",
-    "@react-native-community/cli-platform-apple": "15.0.0-alpha.2",
-    "@react-native-community/cli-tools": "15.0.0-alpha.2",
-    "@react-native-community/cli-types": "15.0.0-alpha.2",
+    "@react-native-community/cli-config": "15.0.1",
+    "@react-native-community/cli-platform-apple": "15.0.1",
+    "@react-native-community/cli-tools": "15.0.1",
+    "@react-native-community/cli-types": "15.0.1",
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
     "yaml": "^2.4.1"
