--- a/packages/eslint-config-react-native/package.json
+++ b/packages/eslint-config-react-native/package.json
@@ -31,8 +31,7 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0",
-    "hermes-eslint": "^0.23.1"
+    "eslint-plugin-react-native": "^4.0.0"
   },
   "peerDependencies": {
     "eslint": ">=8",
