[RN][CI] Add checkout step to check nightly

--- a/.github/workflows/check-nightly.yml
+++ b/.github/workflows/check-nightly.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'facebook/react-native'
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Check nightly
         run: |
           TODAY=$(date "+%Y%m%d")
@@ -24,5 +26,7 @@ jobs:
           else
             echo 'Nightly Worked, All Good!'
           fi
-      - name: Test Libraries
-        uses: ./.github/workflows/test-libraries-on-nightlies.yml
+
+  test-libraries:
+    uses: ./.github/workflows/test-libraries-on-nightlies.yml
+    needs: check-nightly
