fix(flow): ignoring rn-tester pods from flow check

--- a/.flowconfig
+++ b/.flowconfig
@@ -26,6 +26,9 @@
 ; helloworld
 <PROJECT_ROOT>/packages/helloworld/ios/Pods/
 
+; Ignore rn-tester Pods
+<PROJECT_ROOT>/packages/rn-tester/Pods/
+
 [untyped]
 .*/node_modules/@react-native-community/cli/.*/.*
 
