--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -421,7 +421,9 @@ jobs:
           run-e2e-tests: ${{ github.ref == 'refs/heads/main' || contains(github.ref,  'stable') || inputs.run-e2e-tests }}
 
   test_e2e_android_rntester:
-    if: ${{ github.ref == 'refs/heads/main' || contains(github.ref,  'stable') || inputs.run-e2e-tests }}
+    # Temporarily disable RNTester tests on Android as they are quite flaky and they make CI always red
+    # if: ${{ github.ref == 'refs/heads/main' || contains(github.ref,  'stable') || inputs.run-e2e-tests }}
+    if: ${{ contains(github.ref,  'stable') || inputs.run-e2e-tests }}
     runs-on: ubuntu-latest
     needs: [build_android]
     strategy:
