--- a/.github/actions/maestro-android/action.yml
+++ b/.github/actions/maestro-android/action.yml
@@ -25,6 +25,10 @@ inputs:
     required: false
     default: "."
     description: The directory from which metro should be started
+  architecture:
+    required: false
+    default: "NewArch"
+    description: The react native architecture to test
 
 runs:
   using: composite
@@ -52,6 +56,7 @@ runs:
       if: ${{ inputs.flavor == 'debug' }}
       run: ./packages/react-native-codegen/scripts/oss/build.sh
     - name: Run e2e tests
+      id: run-tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 24
@@ -69,16 +74,16 @@ runs:
         NORM_APP_ID=$(echo "${{ inputs.app-id }}" | tr '.' '-')
         echo "app-id=$NORM_APP_ID" >> $GITHUB_OUTPUT
     - name: Store tests result
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4.3.4
       if: always()
       with:
-        name: e2e_android_${{ steps.normalize-app-id.outputs.app-id }}_report_${{ inputs.jsengine }}_${{ inputs.flavor }}
+        name: e2e_android_${{ steps.normalize-app-id.outputs.app-id }}_report_${{ inputs.jsengine }}_${{ inputs.flavor }}_${{ inputs.architecture }}
         path: |
           report.xml
           screen.mp4
     - name: Store Logs
-      if: failure() && steps.run-tests.outcome == 'failure'
+      if: steps.run-tests.outcome == 'failure'
       uses: actions/upload-artifact@v4.3.4
       with:
-        name: maestro-logs-android-${{ steps.normalize-app-id.outputs.app-id }}-${{ inputs.jsengine }}-${{ inputs.flavor }}
+        name: maestro-logs-android-${{ steps.normalize-app-id.outputs.app-id }}-${{ inputs.jsengine }}-${{ inputs.flavor }}-${{ inputs.architecture }}
         path: /tmp/MaestroLogs
